Bug 379433 - PangoItem and GList memory leaks in gfxPangoFontsp=Karl Tomlinson <mozbugz@karlt.net>r=vlad